# dot-viewer

./: .gitignore  .gitmodules  Cargo.toml  README.md  centergraph.dot  graph.dot
.cargo/: config.toml
examples/: large.dot  medium.dot  small.dot
src/: app.rs  command.rs  context.rs  error.rs  graph.rs  lib.rs  main.rs  parser.rs  terminal.rs  ui.rs
src/app/: app.rs  command.rs  error.rs  event.rs  input.rs  key.rs  keybindings.rs  mod.rs  modes.rs  search.rs  view.rs  viewer.rs
src/app/utils/: input.rs  list.rs  mod.rs  tabs.rs  tree.rs  trie.rs
src/graph/: graph.rs  mod.rs  parser.rs
src/repl/: command.rs  context.rs  error.rs  helper.rs  mod.rs  repl.rs
src/ui/: app.rs  command.rs  input.rs  mod.rs  navigate.rs  popup.rs  search.rs  tab.rs  tabs.rs  traverse.rs  tree.rs  ui.rs  view.rs  viewer.rs
src/ui/utils/: htmlparser.rs  mod.rs
src/viewer/: app.rs  command.rs  error.rs  help.rs  keybindings.rs  mod.rs  modes.rs  success.rs  view.rs
src/viewer/utils/: input.rs  list.rs  mod.rs  table.rs  tabs.rs  tree.rs  trie.rs
