[package]
name = "dot-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { git = "https://github.com/jaehyun1ee/tui-rs.git", branch = "master" } 
crossterm = "0.25"
dot-graph = { path = "dot-graph" }
clap = { version = "4.1.1", features = ["derive"] }
trie-rs = "0.1.1"
fuzzy-matcher = "0.3.7"
