[package]
name = "dot-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dot-graph = { path = "dot-graph" }
tui = "0.19.0"
tui-tree-widget = "0.11.0"
crossterm = "0.25"
clap = { version = "4.1.1", features = ["derive"] }
trie-rs = "0.1.1"
fuzzy-matcher = "0.3.7"
html_parser = "0.6.3"
thiserror = "1.0.38"
regex = "1.7.1"
rayon = "1.6.1"
better-panic = "0.3.0"
